REOPENED211578
REGRESSION(r260769): Introduced regressions related to sharing (Requested by perarne on #webkit).
https://bugs.webkit.org/show_bug.cgi?id=211578
Summary REGRESSION(r260769): Introduced regressions related to sharing (Requested by ...
WebKit Commit Bot
Reported 2020-05-07 09:27:34 PDT
https://trac.webkit.org/changeset/260769 broke the build: Introduced regressions related to sharing (Requested by perarne on #webkit). This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of r260769 (17.27 KB, patch)
2020-05-07 09:27 PDT, WebKit Commit Bot
no flags
WebKit Commit Bot
Comment 1 2020-05-07 09:27:39 PDT
Created attachment 398745 [details] REVERT of r260769 Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
Per Arne Vollan
Comment 2 2020-05-07 09:28:30 PDT
EWS
Comment 3 2020-05-07 09:29:25 PDT
Committed r261296: <https://trac.webkit.org/changeset/261296> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398745 [details].
Per Arne Vollan
Comment 4 2020-05-11 08:43:03 PDT
Reverted r261296 for reason: Rolling r260769 back in, since this was not causing a regression. Committed r261479: <https://trac.webkit.org/changeset/261479>
Note You need to log in before you can comment on or make changes to this bug.