Cherry-pick r261296. rdar://problem/62995467

Unreviewed, reverting r260769.
    https://bugs.webkit.org/show_bug.cgi?id=211578

    Introduced regressions related to sharing (Requested by
    perarne on #webkit).

    Reverted changeset:

    "[Cocoa] After r258891, r255119 can be reverted"
    https://bugs.webkit.org/show_bug.cgi?id=211083
    https://trac.webkit.org/changeset/260769

    Canonical link: https://commits.webkit.org/224469@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261296 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/224232.11@safari-610.1.12-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.12-branch@261354 268f45cc-cd09-0410-ab3c-d52691b4dbfc