Source/WebCore/testing/Internals.cpp
@@ -119,6 +119,7 @@
 #include "LibWebRTCProvider.h"
 #include "LoaderStrategy.h"
 #include "Location.h"
+#include "MIMETypeRegistry.h"
 #include "MallocStatistics.h"
 #include "MediaDevices.h"
 #include "MediaEngineConfigurationFactory.h"
@@ -5646,6 +5647,11 @@ bool Internals::hasSandboxIOKitOpenAccessToClass(const String& process, const St
     return false;
 }
 #endif
+
+String Internals::mediaMIMETypeForExtension(const String& extension)
+{
+    return MIMETypeRegistry::getMediaMIMETypeForExtension(extension);
+}
 
 bool Internals::supportsPictureInPicture()
 {
